force-app/main/default/objects/User/fields/FEC_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Agent_ID__c</fullName>
    <label>Agent ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>