force-app/main/default/objects/User/fields/FEC_Default_Queue__c.field-meta.xml
<CustomField>
    <fullName>FEC_Default_Queue__c</fullName>
    <label>Default Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>