force-app/main/default/objects/User/fields/FEC_Main_Queue__c.field-meta.xml
<CustomField>
    <fullName>FEC_Main_Queue__c</fullName>
    <defaultValue>&apos;default value&apos;</defaultValue>
    <label>Main Queue</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>