force-app/main/default/objects/User/fields/FEC_User_Division_Group__c.field-meta.xml
<CustomField>
    <fullName>FEC_User_Division_Group__c</fullName>
    <description>Nhóm khối của người dùng</description>
    <label>User Division Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FEC_User_Division_Group</valueSetName>
    </valueSet>
</CustomField>