force-app/main/default/objects/User/fields/FEC_User_Group__c.field-meta.xml
<CustomField>
    <fullName>FEC_User_Group__c</fullName>
    <description>Thông tin nhóm người dùng</description>
    <label>User Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>User_Group</valueSetName>
    </valueSet>
</CustomField>